# focus-time

./: .gitignore  .pre-commit-config.yaml  README.md  experiment.ipynb  experimevt_2.ipynb  posttraining_analysis.ipynb  pyproject.toml  requirements.txt  start_training.sh  test.ipynb  train.py  train_test.ipynb  train_time.py
config/: app_productivity_scores.yaml
config/train/: default.yaml  default_time.yaml
src/: utils.py
src/analysis/: postprocess.py
src/data/: datasets.py  load_and_preprocess.py
src/models/: transformer_models.py  utils.py
src/training/: iterations.py
