[project]
name = "focus-time"
version = "0.1.0"
description = "focus time exp"
authors = [
    {name = "Nemanja Cukaric", email = "nemanja@logikka.ai"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
